--- a/resources/assets/sass/frontend/template/nizawa/index.scss
+++ b/resources/assets/sass/frontend/template/nizawa/index.scss
@@ -31,6 +31,14 @@
     -webkit-justify-content: flex-start;
             justify-content: flex-start;
 }
+%force-bottom-center {
+    display: -webkit-flex;
+    display:         flex;
+    -webkit-align-items: flex-end;
+            align-items: flex-end;
+    -webkit-justify-content: center;
+            justify-content: center;
+}
 %transparent-mask {
     content: '';
     background-color: rgba($color: #5A5657, $alpha: 0.7);
@@ -1090,7 +1098,7 @@
 
     // Sub page
     .sub-page-banner {
-        @extend %force-center;
+        @extend %force-bottom-center;
         background-size: cover;
         background-position: center;
         height: 520px;
@@ -1116,9 +1124,28 @@
             height: 3px;
             width: 120px;
         }
-        &::before {
-            @extend %transparent-mask;
+        .site-thumbnail-section {
+            width: 100%;
+
+            .site-thumbnail-container {
+                text-align: left;
+                background-color: rgba($color: #000000, $alpha: 0.6);
+                margin-bottom: -8px;
+                widows: 100%;
+                max-width: 950px;
+                border-top-left-radius: 10px;
+                border-top-right-radius: 10px;
+
+                ul.site-thumbnail {
+                    li {
+                        display: inline-block;
+                    }
+                }
+            }
         }
+        // &::before {
+        //     @extend %transparent-mask;
+        // }
     }
 
     // contct form
