--- a/resources/assets/sass/frontend/template/nizawa/index.scss
+++ b/resources/assets/sass/frontend/template/nizawa/index.scss
@@ -1,3 +1,5 @@
+@import '../../../animate.scss';
+
 %footer-logo-border-line {
     position: absolute;
     content: '';
@@ -264,6 +266,147 @@
     
 }
 
+
+.site-mega-menu-overlay {
+    position: fixed;
+    background-color: rgba($color: $second-color, $alpha: 0.3);
+    display: none;
+    top: 180px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 3;
+    opacity: 0;
+
+    // transition: all .2s ease-out;
+
+    &.show {
+        display: block !important;
+    }
+    &.opened {
+        // opacity: 1;
+    }
+}
+
+.site-mega-menu {
+    position: fixed;
+    padding: 50px;
+    padding-bottom: 30px;
+    display: none;
+    background-color: #efefef;
+    top: 180px;
+    left: 0;
+    right: 0;
+    z-index: 3;
+    opacity: 0;
+    box-shadow: 2px 2px 12px -2px rgba($color: #000000, $alpha: 0.6);
+
+    &.showup {
+        display: block !important;
+    }
+    &.opened {
+        // opacity: 1;
+    }
+
+    .mega-nav {
+        .mega-nav-item {
+            display: none;
+
+            &.active {
+                display: flex;
+                display: -webkit-flex;
+                @extend .fadeIn;
+                @extend .animated;
+                @extend .faster;
+            }
+            .left-col {
+                text-align: left;
+                
+                .menu-header {
+                    h3 {
+                        font-weight: 700;
+                    }
+                    hr {
+                        border-top: $main-color 3px solid;
+                        width: 100px; 
+                        margin: 1rem 0;
+                    }
+                }
+            }
+            .right-col {
+                @extend %force-center;
+        
+                ul.site-mega-menu-container {
+                    width: 100%;
+                    display: inline-block;
+        
+                    li.site-mega-menu-item{
+                        overflow: hidden;
+                        float: left;
+                        width: 31%;
+                        margin-left: 2%;
+                        margin-bottom: 2%;
+                        padding: 0;
+                        vertical-align: middle;
+                        background-color: #fff;
+                        transition: all .2s ease-out;
+        
+                        &:hover {
+                            box-shadow: 5px 5px 12px -2px rgba($color: #000000, $alpha: 0.5);
+                        }
+                        a.site-mega-menu-link {
+                            display: block;
+                            color: #292c32;
+                            font-size: 13px;
+                            line-height: 1.3846153846;
+                            text-decoration: none;
+                            -webkit-transition: all .2s ease;
+                            transition: all .2s ease;
+        
+                            &::before {
+                                content: "";
+                                position: absolute;
+                                top: 50%;
+                                right: 14px;
+                                right: 1vw;
+                                width: 6px;
+                                width: 0.4285714286vw;
+                                height: 6px;
+                                height: 0.4285714286vw;
+                                border-bottom: 1px solid $main-color;
+                                border-right: 1px solid $main-color;
+                                -webkit-transform: translateY(50%) rotate(-45deg);
+                                transform: translateY(-50%) rotate(-45deg);
+                                -webkit-transition: all .2s ease;
+                                transition: all .2s ease;
+                            }
+                            img {
+                                height: 70px;
+                                float: left;
+                            }
+                            .header-job-txt {
+                                display: table-cell;
+                                padding: 0 30px;
+                                padding: 0 2.1428571429vw;
+                                height: 70px;
+                                vertical-align: middle;
+                            }
+                            &:hover {
+                                color: $main-color;
+        
+                                &::before {
+                                    right: 12px;
+                                    right: 0.8571428571vw;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
 .mobile-site-header {
     position: fixed;
     top: 0;
@@ -332,7 +475,7 @@
 
 .site-content {
     margin-top: 60px;
-    min-height: 157px;
+    min-height: 180px;
 
     .btn-section {
         text-align: center;
